# teaching

./: .gitignore  .gitmodules  CMakeLists.txt
Arrays/: CMakeLists.txt  determinant.cpp  hoar.cpp  inv_matr.cpp  matr.txt
Combinatorics/: Binomial.cpp  CMakeLists.txt  Combinations.cpp  permut.cpp
Complex tasks/rooks_on_diagonal/: CMakeLists.txt  main.cpp
Database/: CMakeLists.txt  main.cpp
Dynamic Compilation/: CMakeLists.txt  main.cpp
Dynamic Compilation/libVS/: libtcc.exp  libtcc.lib
Dynamic Compilation/tcc/: Makefile  elf.h  libtcc.c  tcc.c  tcc.h  tccelf.c  tcctok.h  tcctools.c
Dynamic Compilation/tcc/include/: stdarg.h
Dynamic Compilation/tcc/win32/: compile_VS.bat
Dynamic Compilation/tcc/win32/include/: wchar.h
Lists/: simple_list.cpp
Number theory/: CMakeLists.txt  squareRootCompare.cpp  squarerootmethods.h
Recursion/: CMakeLists.txt
STUDENT PROJECTS/reversi/: Readme.md
STUDENT PROJECTS/reversi/laba5_reversi/: AIDynamic.cpp  AIGenius.cpp  AIGenius.h  AIGreedy.cpp  AIStatic.cpp  AIStatic.h  BoardHelper.h  Evaluator.h  Human.h  MinMax.cpp  MyWindow.h  Player.h  laba5_reversi.vcxproj
Strings/: CMakeLists.txt  VMask.cpp  levenstein.cpp  replace_string.cpp
binary_search_tree/: main.cpp
console/: CMakeLists.txt  determinant.cpp  inv_matr.cpp  quicksort.cpp  rooks_on_diagonal.cpp
dynamic programming/123_sequence/: CMakeLists.txt
dynamic programming/Diofante_solver/: CMakeLists.txt  Source.cpp  input.txt
dynamic programming/Queen_game/: CMakeLists.txt  main.cpp  task.txt
dynamic_compilation/: CMakeLists.txt  README.md  libtcc_test.c  main.cpp
dynamic_programming/: queen_game.cpp  seq123.cpp
graphics/: CMakeLists.txt  FloodFill.cpp  GameLife.cpp  Screener.cpp  dyn_pict.cpp
graphics/3D/: CMakeLists.txt
graphics/DynamicPicture/: CMakeLists.txt  main.cpp
graphics/FloodFill/: CMakeLists.txt
graphics/Graph/: CMakeLists.txt  Graph.cpp
graphics/Interval intersection/: CMakeLists.txt  main.cpp
graphics/SFML/: CMakeLists.txt  main.cpp
graphics/Screener/: CMakeLists.txt  Screener.cpp
graphics/Texture_balls/: CMakeLists.txt  main.cpp
graphics/Triangle Square/: CMakeLists.txt  main.cpp
sage/: README.md  environment.yml  gen_planar_graphs.py  planar_coloring.py
sage/input_graphs/: graph_1340.txt  graph_19195.txt  graph_49243.txt  graph_49245.txt  graph_660.txt  graph_710.txt
semester_1/Arrays/: CMakeLists.txt  inv_matr.cpp
semester_1/Combinatorics/: CMakeLists.txt  Partition.cpp  cyclic_permut.cpp  permut_rec.cpp
semester_1/Number theory/: CMakeLists.txt  calcPiArbitraryPrecision.cpp  factDivisors.cpp  hamming.cpp  longDifference.cpp  longMultiplying.cpp  squareRootCompare.cpp  squarerootmethods.h
semester_1/Recursion/: CMakeLists.txt  King_path.cpp  king_pass.cpp
semester_1/Strings/: Make_string_alternate.cpp  is_palindrome.cpp  levenstein.cpp
semester_1/dynamic_programming/: CMakeLists.txt  diofante_solver.cpp
semester_1/graphics/: 3D.cpp  CMakeLists.txt  FracTree.cpp  FracTree_SFML.cpp  IntervalIntersection.cpp  SFML_sprites.cpp  SFML_square.cpp  Screener.cpp  busy_turtle.cpp
semester_1/graphics/glad/: glad.c  glad.h
semester_1/graphics_freeglut/: 3D.cpp  CMakeLists.txt  FloodFill.cpp  GameLife.cpp  Graph.cpp  IntervalIntersection.cpp  TriangleSquare.cpp
semester_1/graphics_old/: CMakeLists.txt  Graph.cpp  README.md  TriangleSquare.cpp
semester_2/Database/: CMakeLists.txt  DataBase.cpp  read_db.cpp
semester_2/Lists/: CMakeLists.txt  cyclic_list.cpp  simple_list.cpp
semester_2/STUDENT PROJECTS/reversi/: laba5_reversi.sln
semester_2/STUDENT PROJECTS/reversi/laba5_reversi/: AIDynamic.h  AIGreedy.h  AIRandom.cpp  AIRandom.h  BoardController.h  BoardHelper.cpp  MinMax.h  Point.h  laba5_reversi.cpp  laba5_reversi.vcxproj.filters
semester_2/SparseMatrix/: CMakeLists.txt  SparseMatrixDeterminant.cpp  aux_fun.h  matrix5x5.txt
semester_2/binary_search_tree/: CMakeLists.txt
test/: CMakeCache.txt  Makefile  PreLoad.cmake  Readme.md  cmake_install.cmake  main.cpp
